--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!doctype html>
 
-<html lang="en">
+<html>
 <head>
   <meta charset="utf-8">
 
   <title>Crystal Collector Game</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/css/reset.css">
   <link rel="stylesheet" href="./assets/css/style.css">
   <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
-
-  
+  <script type="text/javascript" src="./assets/javascript/game.js"></script>
 
 </head>
 
 <body>
-  <script src="./assets/javascript/game.js"></script>
+
+
 </body>
 </html>
