--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
 </head>
 
 <body>
+    <header>
+            <div class="jumbotron jumbotron-fluid p-5">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col text-center">
+                                <h1 class="display-4 text-center">Crystal Collector Game</h1>
+                                <button type="button" class="btn btn-primary btn-lg mt-4" id="rulesBtn">Game Rules</button>
+                                </div>
+                        </div>
+                    </div>
+                  </div>
+    </header>
 
 
 </body>
