Working on html/bootstrap

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
                             <div class="col text-center">
                                 <h1 class="display-4 text-center">Crystal Collector Game</h1>
                                 <button type="button" class="btn btn-primary btn-lg mt-4" id="rulesBtn">Game Rules</button>
+                                <div class="card mt-4" style="display: none" id="rulesInfo">
+                                  <div class="card-body text-left">
+                                    ---Rules---
+                                  </div>
+                                </div>
                                 </div>
                         </div>
                     </div>
