Adding crystal images/score divs

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-            <div class="jumbotron jumbotron-fluid p-5">
+            <div class="jumbotron jumbotron-fluid p-5 m-4">
                     <div class="container">
                         <div class="row">
                             <div class="col text-center">
@@ -31,7 +31,43 @@
                     </div>
                   </div>
     </header>
-
-
+  
+  <div class="container">
+    <div class="row m-auto">
+      <div class="col-md-3 m-auto border border-info p-3">
+        Wins:
+      </div>
+      <div class="col-md-3 m-auto border border-info p-3">
+        Losses:
+      </div>
+    </div>
+  </div>
+  <div class="container mt-4">
+    <div class="row m-auto">
+      <div id="targetScore" class="col-md-4 m-auto border border-danger pt-2 pb-5 text-center">
+        Target Score
+        <hr class="bg-dark mt-2">
+      </div>
+      <div id="yourScore" class="col-md-4 m-auto border border-danger pt-2 pb-5 text-center">
+        Your Score
+        <hr class="bg-dark mt-2">
+      </div>
+    </div>
+  </div>
+  <div class="container mt-4">
+    <div class="row m-auto">
+      <div class="col-md-2 m-auto">
+        <img src="./assets/images/Screen Shot 2019-07-19 at 2.22.19 PM.png" alt="..." class="img-thumbnail">
+      </div>
+      <div class="col-md-2 m-auto">
+        <img src="./assets/images/Screen Shot 2019-07-19 at 2.22.40 PM.png" alt="..." class="img-thumbnail">
+      </div>
+      <div class="col-md-2 m-auto">
+        <img src="./assets/images/Screen Shot 2019-07-19 at 2.23.31 PM.png" alt="..." class="img-thumbnail">
+      </div>
+      <div class="col-md-2 m-auto">
+        <img src="./assets/images/Screen Shot 2019-07-19 at 2.24.00 PM.png" alt="..." class="img-thumbnail">
+    </div>
+  </div>
 </body>
 </html>
