--- a/index.html
+++ b/index.html
@@ -23,7 +23,14 @@
                                 <button type="button" class="btn btn-primary btn-lg mt-4" id="rulesBtn">Game Rules</button>
                                 <div class="card mt-4" style="display: none" id="rulesInfo">
                                   <div class="card-body text-left">
-                                    ---Rules---
+                                    <ul>
+                                        <li>-You will be given a random "Target Number" at the start of the game.</li>
+                                        <li>-There are 4 crystals below. Each crystal will be given a randomized value at the start of each game.</li>
+                                        <li>-By clicking on the crystals, you will add that random value to "Your Score".</li>
+                                        <li>-The goal is to match "Your Score" with the "Target Score."</li>
+                                        <li>-If you match "Your Score" to the "Target Score" you win!</li>
+                                        <li>-If you surpass the "Target Score" with "Your Score", you lose, and the game resets.</li>
+                                    </ul>>
                                   </div>
                                 </div>
                                 </div>
@@ -34,39 +41,38 @@
   
   <div class="container">
     <div class="row m-auto">
-      <div class="col-md-3 m-auto border border-info p-3">
+      <div id="wins" class="col-md-3 m-auto text-light p-3 text-center">
         Wins:
       </div>
-      <div class="col-md-3 m-auto border border-info p-3">
+      <div id="losses" class="col-md-3 m-auto text-light p-3 text-center">
         Losses:
       </div>
     </div>
   </div>
   <div class="container mt-4">
     <div class="row m-auto">
-      <div id="targetScore" class="col-md-4 m-auto border border-danger pt-2 pb-5 text-center">
+      <div id="targetScore" class="col-md-4 m-auto text-light pt-2 pb-5 text-center">
         Target Score
-        <hr class="bg-dark mt-2">
+        <hr class="bg-light mt-2">
       </div>
-      <div id="yourScore" class="col-md-4 m-auto border border-danger pt-2 pb-5 text-center">
-        Your Score
-        <hr class="bg-dark mt-2">
+      <div id="yourScore" class="col-md-4 m-auto text-light pt-2 pb-5 text-center">
+        Your Score : 
       </div>
     </div>
   </div>
   <div class="container mt-4">
     <div class="row m-auto">
       <div class="col-md-2 m-auto">
-        <img src="./assets/images/Screen Shot 2019-07-19 at 2.22.19 PM.png" alt="..." class="img-thumbnail">
+        <img id="crystalOne" src="./assets/images/Screen Shot 2019-07-19 at 2.22.19 PM.png" alt="..." class="img-thumbnail">
       </div>
       <div class="col-md-2 m-auto">
-        <img src="./assets/images/Screen Shot 2019-07-19 at 2.22.40 PM.png" alt="..." class="img-thumbnail">
+        <img id="crystalTwo" src="./assets/images/Screen Shot 2019-07-19 at 2.22.40 PM.png" alt="..." class="img-thumbnail">
       </div>
       <div class="col-md-2 m-auto">
-        <img src="./assets/images/Screen Shot 2019-07-19 at 2.23.31 PM.png" alt="..." class="img-thumbnail">
+        <img id="crystalThree" src="./assets/images/Screen Shot 2019-07-19 at 2.23.31 PM.png" alt="..." class="img-thumbnail">
       </div>
       <div class="col-md-2 m-auto">
-        <img src="./assets/images/Screen Shot 2019-07-19 at 2.24.00 PM.png" alt="..." class="img-thumbnail">
+        <img id="crystalFour" src="./assets/images/Screen Shot 2019-07-19 at 2.24.00 PM.png" alt="..." class="img-thumbnail">
     </div>
   </div>
 </body>
