--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                                         <li>-There are 4 crystals below. Each crystal will be given a randomized value at the start of each game.</li>
                                         <li>-By clicking on the crystals, you will add that random value to "Your Score".</li>
                                         <li>-The goal is to match "Your Score" with the "Target Score."</li>
-                                        <li>-If you match "Your Score" to the "Target Score" you win!</li>
+                                        <li>-If you match "Your Score" to the "Target Score" you win! The game will reset.</li>
                                         <li>-If you surpass the "Target Score" with "Your Score", you lose, and the game resets.</li>
                                     </ul>>
                                   </div>
